[F] Logic and test according to CI/CD escenary
