# src/main/java/com/hiberus/payment/infrastructure/entrypoints/rest/controller/PaymentOrderController.java
@@ -2,10 +2,12 @@ package com.hiberus.payment.infrastructure.entrypoints.rest.controller;
 
 import com.hiberus.payment.application.usecase.PaymentOrderUseCase;
 import com.hiberus.payment.infrastructure.entrypoints.rest.api.PaymentOrderApi;
+import com.hiberus.payment.infrastructure.entrypoints.rest.dto.ApiResponsePaymentOrder;
+import com.hiberus.payment.infrastructure.entrypoints.rest.dto.ApiResponsePaymentOrderList;
+import com.hiberus.payment.infrastructure.entrypoints.rest.dto.ApiResponsePaymentOrderStatus;
 import com.hiberus.payment.infrastructure.entrypoints.rest.dto.InitiatePaymentOrderRequest;
-import com.hiberus.payment.infrastructure.entrypoints.rest.dto.PaymentOrderResponse;
-import com.hiberus.payment.infrastructure.entrypoints.rest.dto.PaymentOrderStatusResponse;
 import com.hiberus.payment.infrastructure.entrypoints.rest.mapper.PaymentOrderRestMapper;
+import com.hiberus.payment.infrastructure.entrypoints.rest.constants.ApiConstants;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -24,25 +26,61 @@ public class PaymentOrderController implements PaymentOrderApi {
     }
 
     @Override
-    public Mono<ResponseEntity<PaymentOrderResponse>> initiatePaymentOrder(Mono<InitiatePaymentOrderRequest> initiatePaymentOrderRequest, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<ApiResponsePaymentOrder>> initiatePaymentOrder(Mono<InitiatePaymentOrderRequest> initiatePaymentOrderRequest, ServerWebExchange exchange) {
         return initiatePaymentOrderRequest
                 .map(mapper::toDomain)
                 .flatMap(paymentOrderUseCase::initiatePaymentOrder)
                 .map(mapper::toResponse)
-                .map(response -> ResponseEntity.status(HttpStatus.CREATED).body(response));
+                .map(resp -> {
+                    ApiResponsePaymentOrder wrapper = new ApiResponsePaymentOrder()
+                            .code(ApiConstants.CODE_SUCCESS)
+                            .status(ApiConstants.STATUS_SUCCESS)
+                            .message(ApiConstants.MSG_PAYMENT_ORDER_CREATED)
+                            .data(resp);
+                    return ResponseEntity.status(HttpStatus.CREATED).body(wrapper);
+                });
     }
 
     @Override
-    public Mono<ResponseEntity<PaymentOrderResponse>> retrievePaymentOrder(String id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<ApiResponsePaymentOrder>> retrievePaymentOrder(String id, ServerWebExchange exchange) {
         return paymentOrderUseCase.retrievePaymentOrder(id)
                 .map(mapper::toResponse)
-                .map(ResponseEntity::ok);
+                .map(resp -> {
+                    ApiResponsePaymentOrder wrapper = new ApiResponsePaymentOrder()
+                            .code(ApiConstants.CODE_SUCCESS)
+                            .status(ApiConstants.STATUS_SUCCESS)
+                            .message(ApiConstants.MSG_PAYMENT_ORDER_RETRIEVED)
+                            .data(resp);
+                    return ResponseEntity.ok(wrapper);
+                });
     }
 
     @Override
-    public Mono<ResponseEntity<PaymentOrderStatusResponse>> retrievePaymentOrderStatus(String id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<ApiResponsePaymentOrderStatus>> retrievePaymentOrderStatus(String id, ServerWebExchange exchange) {
         return paymentOrderUseCase.retrievePaymentOrderStatus(id)
                 .map(mapper::toStatusResponse)
-                .map(ResponseEntity::ok);
+                .map(resp -> {
+                    ApiResponsePaymentOrderStatus wrapper = new ApiResponsePaymentOrderStatus()
+                            .code(ApiConstants.CODE_SUCCESS)
+                            .status(ApiConstants.STATUS_SUCCESS)
+                            .message(ApiConstants.MSG_PAYMENT_ORDER_STATUS_RETRIEVED)
+                            .data(resp);
+                    return ResponseEntity.ok(wrapper);
+                });
+    }
+
+    @Override
+    public Mono<ResponseEntity<ApiResponsePaymentOrderList>> retrieveAllPaymentOrders(ServerWebExchange exchange) {
+        return paymentOrderUseCase.retrieveAllPaymentOrders()
+                .map(mapper::toResponse)
+                .collectList()
+                .map(list -> {
+                    ApiResponsePaymentOrderList wrapper = new ApiResponsePaymentOrderList()
+                            .code(ApiConstants.CODE_SUCCESS)
+                            .status(ApiConstants.STATUS_SUCCESS)
+                            .message(ApiConstants.MSG_PAYMENT_ORDER_LIST_RETRIEVED)
+                            .data(list);
+                    return ResponseEntity.ok(wrapper);
+                });
     }
 }
